# dev-utils

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  AUTHORS.md  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  README.md  codemeta.json  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  pypi.yml
.reuse/: dep5
docs/scripts/: cov_badge.py
latest/coverage/: d_d047d89fbfd3cdfd___init___py.html  d_d047d89fbfd3cdfd_update_codemeta_py.html
latest/reference/dev_utils/: index.html
latest/reference/dev_utils/update_codemeta/: index.html
main/: 404.html  index.html  objects.inv  sitemap.xml
main/changelog/: index.html
main/code_of_conduct/: index.html
main/contributing/: index.html
main/coverage/: covindex.html  d_d047d89fbfd3cdfd___init___py.html  d_d047d89fbfd3cdfd_update_codemeta_py.html  index.html  status.json
main/credits/: index.html
main/license/: index.html
main/quickstart/: index.html
main/reference/SUMMARY/: index.html
main/reference/dev_utils/: index.html
main/reference/dev_utils/update_codemeta/: index.html
main/search/: search_index.json
main/usage/: index.html
src/dev_utils/: lib.py  update_codemeta.py
tests/: __init__.py  test_lib.py  test_update_codemeta.py
